# open-soul

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yaml
osp/: __init__.py  cli.py  drives.py  generator.py  merger.py  models.py  templates.py  updater.py  validator.py
runtime/: evolution.yaml  genesis.yaml  reflection.md  render.md
seeds/: 10x_engineer.yaml  bestie.yaml  boyfriend.yaml  cat.yaml  dreamer.yaml  girlfriend.yaml  glitch.yaml  jester.yaml  philosopher.yaml  qa_breaker.yaml  sentinel.yaml  shadow_mentor.yaml  tabula_rasa.yaml
tests/: requirements.txt  test_cli.py  test_drives.py  test_generator.py  test_merger.py  test_render.py  test_seeds.py  test_templates.py  test_updater.py
tools/: test_render.py  validate_seeds.py
